# ual-adapter

./: .gitignore  .readthedocs.yaml  DOCUMENTATION.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  verify_package.py
.github/workflows/: ci.yml
docs/: requirements.txt
docs/source/: architecture.rst  changelog.rst  conf.py  contributing.rst  index.rst  installation.rst  license.rst  quickstart.rst
docs/source/advanced/: custom_architectures.rst  multi_domain.rst  optimization.rst  troubleshooting.rst
docs/source/api/: adapter.rst  air.rst  binders.rst  dispatcher.rst  projection.rst  trainer.rst  utils.rst
docs/source/concepts/: air_format.rst  dimension_projection.rst  lora_dispatcher.rst  model_binders.rst
docs/source/tutorials/: basic_transfer.rst  custom_training.rst  index.rst  multi_domain.rst
examples/: CRM_MultiAgent_UAL_ADK_V0.ipynb  UAL_Adapter_Tutorial_Basic.ipynb  complete_example.py  quick_start.py
tests/: conftest.py  test_air.py  test_dispatcher.py  test_projection.py
ual_adapter/: __init__.py  cli.py
ual_adapter/binders/: __init__.py  architectures.py  base.py  registry.py
ual_adapter/core/: adapter.py  air.py  dispatcher.py  projection.py
ual_adapter/training/: trainer.py
ual_adapter/utils/: model_utils.py
